# disambiguate_docdb_id

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  apply_frontfile_to_lmdb.py  backfile_to_tsv.py  bdds_client.py  build_lmdb_with_backfile.py  country_codes.py  docker-compose.yml  download_backfile.py  download_frontfile.py  extract_alias_tsv.py  extract_layer1_tsv.py  frontfile_to_tsv.py  helpers.py  ingest_backfile.py  initialize_alias_from_tsv.py  initialize_core_from_tsv.py  initialize_layer1_from_tsv.py  pyproject.toml  query_lmdb.py  update_lmdb_with_frontfile.py
.github/workflows/: ci.yml
deploy/: nginx.conf  renew_cert.sh  update_db.sh
src/docdb_id/: __init__.py  country_codes.py  normalize.py  utils.py
src/docdb_id/agent/: default_prompt.py  vllm_agent.py
src/docdb_id/alias/: __init__.py  extract.py
src/docdb_id/api/: server.py
src/docdb_id/bdds/: __init__.py  client.py  ingest.py
src/docdb_id/cli/: __init__.py  alias_extract.py  alias_gc.py  alias_load.py  apply_frontfile.py  backfile.py  compact.py  core.py  frontfile.py  query.py  show_meta.py
src/docdb_id/mcp/: server.py
src/docdb_id/parse/: __init__.py  docdb_target.py
src/docdb_id/store/: __init__.py  alias.py  apply_frontfile.py  compact.py  core.py  query.py  schema.py
src/docdb_id/web/: db.py  mcp_agent.py  server.py
src/docdb_id/web/static/: index.html
tests/: test_alias_extract.py  test_alias_gc.py  test_api.py  test_apply_frontfile_alias.py  test_apply_frontfile_pure.py  test_compact.py  test_core.py  test_docdb_target.py  test_ingest_frontfile_partition.py  test_ingest_nested_zip.py  test_normalize.py  test_query.py  test_show_meta.py  test_web.py
