[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "disambiguate-docdb-id"
version = "0.1.0"
description = "A simple endpoint to disambiguate DOCDB identifiers"
readme = "README.md"
requires-python = ">=3.10,<3.11"
authors = [
    {name = "Guillaume Filion", email = "guillaume.filion@gmail.com"}
]
dependencies = [
    "tqdm>=4.67.1,<5",
    "lmdb>=2.2.0",
    "msgpack>=1.1.0,<2",
    "lxml>=6.1.1",
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.2",
    "pytest>=9.0.0",
]

[project.scripts]
docdb-backfile = "docdb_id.cli.backfile:main"
docdb-frontfile = "docdb_id.cli.frontfile:main"
docdb-core = "docdb_id.cli.core:main"
docdb-alias-extract = "docdb_id.cli.alias_extract:main"
docdb-alias-load = "docdb_id.cli.alias_load:main"
docdb-apply-frontfile = "docdb_id.cli.apply_frontfile:main"
docdb-query = "docdb_id.cli.query:main"
docdb-show-meta = "docdb_id.cli.show_meta:main"

[tool.hatch.build.targets.wheel]
packages = ["src/docdb_id"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
